--- a/helloworld-blockchain-application/src/main/resources/static/transaction.html
+++ b/helloworld-blockchain-application/src/main/resources/static/transaction.html
@@ -92,7 +92,7 @@
         <script>
             $(async function(){
                 let urlParameters = parseUrlParameters(location)
-                const response = await $ajax({
+                let response = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryTransactionByTransactionHash",
                     data: `{"transactionHash":"${urlParameters.get("transactionHash")}"}`
                 });
