--- a/helloworld-blockchain-application/src/main/resources/static/wallet.html
+++ b/helloworld-blockchain-application/src/main/resources/static/wallet.html
@@ -54,9 +54,8 @@
         </div>
 
         <script>
-            const obj = {}
             $(async function(){
-                const response = await $ajax({
+                let response = await $ajax({
                     url : baseUrl() + "/Api/WalletApplication/QueryAllAccounts"
                 })
                 $("#balance").text("总余额 "+response.data.balance);
@@ -114,22 +113,22 @@
             }
 
             async function create(){
-                const response = await $ajax({
+                let response = await $ajax({
                     url : baseUrl() + "/Api/WalletApplication/CreateAccount"
                 })
-                var account = response.data.account;
-                var content = '<h2 class="red">提示: 请在您信任的站点生成账户！</h2>' +
+                let account = response.data.account;
+                let content = '<h2 class="red">提示: 请在您信任的站点生成账户！</h2>' +
                                  '<div><span>账号(区块链领域学名:地址)</span>&nbsp;&nbsp;'+account.address+'</div>' +
                                  '<div><span>密码(区块链领域学名:私钥)</span>&nbsp;&nbsp;'+account.privateKey+'</div>' ;
                 layer.alert(content);
             }
 
             async function createAndSave(){
-                const response = await $ajax({
+                let response = await $ajax({
                     url : baseUrl() + "/Api/WalletApplication/CreateAndSaveAccount"
                 })
-                var account = response.data.account;
-                var content = '<h2 class="red">提示: 请在您信任的站点生成账户！你创建的数字货币账号与密码已经保存本网站了！</h2>' +
+                let account = response.data.account;
+                let content = '<h2 class="red">提示: 请在您信任的站点生成账户！你创建的数字货币账号与密码已经保存本网站了！</h2>' +
                                  '<div><span>账号(区块链领域学名:地址)</span>&nbsp;&nbsp;'+account.address+'</div>' +
                                  '<div><span>密码(区块链领域学名:私钥)</span>&nbsp;&nbsp;'+account.privateKey+'</div>' ;
                 layer.alert(content,function(){location.reload();});
