--- a/helloworld-blockchain-application/src/main/resources/static/block.html
+++ b/helloworld-blockchain-application/src/main/resources/static/block.html
@@ -45,9 +45,9 @@
         <script>
             let urlParameters = parseUrlParameters(location)
 
-            var request1 = `{ "blockHash": "${urlParameters.get("hash")}"}`;
+            let request1 = `{ "blockHash": "${urlParameters.get("hash")}"}`;
             $(async function(){
-                const response1 = await $ajax({
+                let response1 = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryBlockByBlockHash",
                     data: request1
                 });
@@ -102,9 +102,9 @@
                 </div>`)
             }())
 
-            var request2 = `{ "blockHash": "${urlParameters.get("hash")}", "pageCondition": { "from": 1, "size": 10 } }`;
+            let request2 = `{ "blockHash": "${urlParameters.get("hash")}", "pageCondition": { "from": 1, "size": 10 } }`;
             async function loadTransactions(){
-                const response2 = await $ajax({
+                let response2 = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryTransactionsByBlockHashTransactionHeight",
                     data: request2
                 });
@@ -119,7 +119,7 @@
                     $('#box').append(transactionHtml(item))
                 })
 
-                const jsonObjectRequest2 = JSON.parse(request2);
+                let jsonObjectRequest2 = JSON.parse(request2);
                 jsonObjectRequest2.pageCondition.from += jsonObjectRequest2.pageCondition.size;
                 request2 = JSON.stringify(jsonObjectRequest2);
             }
