--- a/helloworld-blockchain-application/src/main/resources/static/index.html
+++ b/helloworld-blockchain-application/src/main/resources/static/index.html
@@ -66,7 +66,7 @@
 
         <script>
             $(async function(){
-                const response = await $ajax({
+                let response = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryTop10Blocks"
                 })
                 $(response.data.blocks).each((index, item) => {
