--- a/helloworld-blockchain-application/src/main/resources/static/search.html
+++ b/helloworld-blockchain-application/src/main/resources/static/search.html
@@ -45,14 +45,14 @@
 
         <script>
             async function search(){
-                var searchValue = $("#search").val().trim();
+                let searchValue = $("#search").val().trim();
                 if(searchValue == null || searchValue==""){
                     alert("输入区块高度、区块哈希、交易哈希、地址...");
                     return;
                 }
 
-                var request = "" ;
-                var response = "" ;
+                let request = "" ;
+                let response = "" ;
 
                 if(!isNaN(searchValue)){
                     //区块高度
@@ -64,7 +64,7 @@
                     if(response.data != null){
                         alert("识别为区块高度，点击确认按钮，跳转到区块详情页。");
                         let {block} = response.data;
-                        var redirectUrl = `./block.html?hash=${block.hash}`;
+                        let redirectUrl = `./block.html?hash=${block.hash}`;
                         console.log(redirectUrl);
                         window.location.href = redirectUrl;
                         return;
@@ -79,8 +79,7 @@
                 });
                 if(response.data != null){
                     alert("识别为区块哈希，点击确认按钮，跳转到区块详情页。");
-                    var redirectUrl = `./block.html?hash=${searchValue}`;
-                    console.log(redirectUrl);
+                    let redirectUrl = `./block.html?hash=${searchValue}`;
                     window.location.href = redirectUrl;
                     return;
                 }
@@ -93,8 +92,7 @@
                 });
                 if(response.data != null){
                     alert("识别为交易哈希，点击确认按钮，跳转到交易详情页。");
-                    var redirectUrl = `./transaction.html?transactionHash=${searchValue}`;
-                    console.log(redirectUrl);
+                    let redirectUrl = `./transaction.html?transactionHash=${searchValue}`;
                     window.location.href = redirectUrl;
                     return;
                 }
@@ -107,8 +105,7 @@
                 });
                 if(response.data != null && response.data.transactionOutputDetail != null){
                     alert("识别为地址，点击确认按钮，跳转到地址详情页。");
-                    var redirectUrl = `./address.html?address=${searchValue}`;
-                    console.log(redirectUrl);
+                    let redirectUrl = `./address.html?address=${searchValue}`;
                     window.location.href = redirectUrl;
                     return;
                 }
@@ -121,8 +118,7 @@
                 });
                 if(response.data != null && response.data.transaction != null){
                     alert("识别为未确认的交易，点击确认按钮，跳转到未确认的交易详情页。");
-                    var redirectUrl = `./unconfirm-transaction.html?transactionHash=${searchValue}`;
-                    console.log(redirectUrl);
+                    let redirectUrl = `./unconfirm-transaction.html?transactionHash=${searchValue}`;
                     window.location.href = redirectUrl;
                     return;
                 }
