--- a/helloworld-blockchain-application/src/main/resources/static/unconfirm-transactions.html
+++ b/helloworld-blockchain-application/src/main/resources/static/unconfirm-transactions.html
@@ -40,10 +40,10 @@
         </div>
         <div style="margin-top: 10px; " class="page" id="page"><button class="btn btn-primary" onclick="load()">加载更多</button></div>
         <script>
-            var request = `{"pageCondition":{"from":1,"size":10}}`
+            let request = `{"pageCondition":{"from":1,"size":10}}`
             load();
             async function load(){
-                const response = await $ajax({
+                let response = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryUnconfirmedTransactions",
                     data: request
                 });
@@ -55,7 +55,7 @@
                     $('#container').append(unconfirmTransactionHtml(item))
                 })
 
-                const jsonObjectRequest = JSON.parse(request);
+                let jsonObjectRequest = JSON.parse(request);
                 jsonObjectRequest.pageCondition.from += jsonObjectRequest.pageCondition.size;
                 request = JSON.stringify(jsonObjectRequest);
             }
