--- a/helloworld-blockchain-application/src/main/resources/static/unconfirm-transactions.html
+++ b/helloworld-blockchain-application/src/main/resources/static/unconfirm-transactions.html
@@ -47,19 +47,19 @@
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryUnconfirmedTransactions",
                     data: request
                 });
-                let {transactions} = response.data;
-                if(transactions == null || transactions.length == 0){
+                let {unconfirmedTransactions} = response.data;
+                if(unconfirmedTransactions == null || unconfirmedTransactions.length == 0){
                     $("#page button").html("未确认交易数据加载完毕。");
                 }
-                transactions.forEach(item => {
-                    $('#container').append(unconfirmTransactionHtml(item))
+                unconfirmedTransactions.forEach(item => {
+                    $('#container').append(unconfirmedTransactionHtml(item))
                 })
 
                 let jsonObjectRequest = JSON.parse(request);
                 jsonObjectRequest.pageCondition.from += jsonObjectRequest.pageCondition.size;
                 request = JSON.stringify(jsonObjectRequest);
             }
-            function unconfirmTransactionHtml(item){
+            function unconfirmedTransactionHtml(item){
                 let left = '';
                 item.inputs.forEach(item1 => {
                     left += `<div>付：<span><a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${item1.address}">${item1.address}</a></span>&nbsp;<a title="交易输出，点击查看交易输出详情。" target="_blank" href="./transactionoutput.html?transactionHash=${item1.transactionHash}&transactionOutputIndex=${item1.transactionOutputIndex}"><i class="glyphicon-euro"></i></a>&nbsp;<span>${item1.value}</span></div>`
